@@ -276,6 +276,20 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|atomic
+operator|.
+name|AtomicBoolean
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -829,10 +843,14 @@ name|dfsClient
 decl_stmt|;
 DECL|field|closed
 specifier|private
-name|boolean
+name|AtomicBoolean
 name|closed
 init|=
+operator|new
+name|AtomicBoolean
+argument_list|(
 literal|false
+argument_list|)
 decl_stmt|;
 DECL|field|src
 specifier|private
@@ -3127,9 +3145,26 @@ name|IOException
 block|{
 if|if
 condition|(
+operator|!
 name|closed
+operator|.
+name|compareAndSet
+argument_list|(
+literal|false
+argument_list|,
+literal|true
+argument_list|)
 condition|)
 block|{
+name|DFSClient
+operator|.
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"DFSInputStream has been closed already"
+argument_list|)
+expr_stmt|;
 return|return;
 block|}
 name|dfsClient
@@ -3254,10 +3289,6 @@ name|super
 operator|.
 name|close
 argument_list|()
-expr_stmt|;
-name|closed
-operator|=
-literal|true
 expr_stmt|;
 block|}
 annotation|@
@@ -3838,6 +3869,9 @@ expr_stmt|;
 if|if
 condition|(
 name|closed
+operator|.
+name|get
+argument_list|()
 condition|)
 block|{
 throw|throw
@@ -6636,6 +6670,9 @@ expr_stmt|;
 if|if
 condition|(
 name|closed
+operator|.
+name|get
+argument_list|()
 condition|)
 block|{
 throw|throw
@@ -7208,6 +7245,9 @@ block|}
 if|if
 condition|(
 name|closed
+operator|.
+name|get
+argument_list|()
 condition|)
 block|{
 throw|throw
@@ -7528,6 +7568,9 @@ block|{
 if|if
 condition|(
 name|closed
+operator|.
+name|get
+argument_list|()
 condition|)
 block|{
 throw|throw
